fixed color and padding issues on mobile with the dashboard component

--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -2,6 +2,10 @@
     --width: 300px;
   }
 
+  ion-tittle{
+    --color:#fff
+  }
+
   .desktop{
       width: 100%;
       height: 100vh;
@@ -71,9 +75,20 @@ span > ion-icon{
         display:none
       }
 
+      span > ion-icon{
+        color: rgba(var(--ion-text-color-rgb, 0, 0, 0), 0.54);
+          font-size: 24px;
+      }
+
       app-header{
         display: block;
       }
+
+      .item.sc-ion-label-ios-h, .item .sc-ion-label-ios-h {
+        --color: #fff;
+        color: var(--color);
+    
+    }
 
      
 
@@ -88,6 +103,8 @@ span > ion-icon{
 
       .mobRoutes{
         display: block;
+        background-color: #7080d5;
+
       }
 
       .picContainer{
