--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,3 +3,7 @@ ion-icon{
     font-size: 26px;
     
 }
+
+ion-title{
+    --color:#fff
+}
